# picoPDA

./: CMakeLists.txt  LICENSE  lv_conf.h  picoPDA.c
driver/: CMakeLists.txt  common.c  common.h
driver/lcd/: driver_lcd.c  driver_lcd.h
driver/touch/: driver_touch.c  driver_touch.h
